--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-redux-toastr": "^7.2.3",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
-    "react-scripts": "1.1.2",
+    "react-scripts": "^1.1.5",
     "redux": "^3.7.2",
     "redux-auth-wrapper": "^2.0.2",
     "redux-firestore": "^0.3.2",
@@ -42,6 +42,6 @@
   },
   "devDependencies": {
     "redux-devtools-extension": "^2.13.2",
-    "source-map-explorer": "^1.5.0"
+    "source-map-explorer": "^1.6.0"
   }
 }
